Yeah! Made stuff working and added stuff!
-Hologram Renderer works, it renders the blocks of the tile entity
-Added an creative tab
-Added an commando to get the id of the item

--- a/src/main/resources/assets/randomperipherals/lang/de_DE.lang
+++ b/src/main/resources/assets/randomperipherals/lang/de_DE.lang
@@ -13,3 +13,8 @@ me.kemal.randomperipheral.decInput=Maximale Einnahme verringern
 
 me.kemal.randomperipheral.idOfUpgradeInventory=ID des Inventory Turtle Upgrades
 me.kemal.randomperipheral.idOfUpgradeDispenser=ID des Dispenser Turtle Upgrades
+
+itemGroup.tabRandomP=Random Peripherals
+
+me.kemal.randomperipheral.chat.heldItemName=Der Unlokalisierte Name(den du in Kommandos und ComputerCraft Programmen benutzen kannst) des Items welches du gerade in der Hand hälts lautet:
+me.kemal.randomperipheral.chat.noItem=Um das Kommando benutzen zu können musst du etwas in der Hand halten
