Finished up, Release!
Alot of refactory, polishing and bug fixes for the release!

--- a/src/main/resources/assets/randomperipherals/lang/de_DE.lang
+++ b/src/main/resources/assets/randomperipherals/lang/de_DE.lang
@@ -1,6 +1,7 @@
 #Random Peripherals German Language File
 
 tile.universalInterface.name=Universelle Schnittstelle
+tile.hologramProjector.name=Hologramm Projektor
 
 container.universalInterface=Unverselle Schnittstelle
 
