Updated language files and fixed building

--- a/src/main/resources/assets/randomperipherals/lang/de_DE.lang
+++ b/src/main/resources/assets/randomperipherals/lang/de_DE.lang
@@ -3,6 +3,8 @@
 tile.universalInterface.name=Universelle Schnittstelle
 tile.hologramProjector.name=Hologramm Projektor
 
+item.iconMapDisk.name=Interdimensionaler Dateien Synchroninator
+
 container.universalInterface=Unverselle Schnittstelle
 
 me.kemal.randomperipheral.maxOutput=Maximale Ausgabe
